--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/background.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/background.tex
@@ -115,7 +115,7 @@
 %         \item ROS スレッドの予測可能なサービスを確保するためのメカニズムはリソースの予約
 %         \item リソースの予約は通常, 予約サーバによって実装される
 %               \begin{block}{リソースの予約}
-%                   予約サーバ $r_{i}$ は予算 $Q_{i}$ と周期 $P_{i}$ によって特徴付けられ, そのクライアントスレッドが各周期に $Q_{i}$ 単位の実行時間を受け取ることを保証する
+%                   予約サーバ $r_{i}$ はバジェット $Q_{i}$ と周期 $P_{i}$ によって特徴付けられ, そのクライアントスレッドが各周期に $Q_{i}$ 単位の実行時間を受け取ることを保証する
 %               \end{block}
 %     \end{itemize}
 % \end{frame}
@@ -126,7 +126,7 @@
 %               \begin{enumerate}
 %                   \item 各予約には暗黙のデッドラインがある
 %                   \item $r_i$がワークロードを持つときはいつでも, 予約アルゴリズムが$P_i$時間単位ごとに少なくとも$Q_i$単位のサービスを保証する
-%                   \item 予算枯渇と他の予約のレイテンシによる, ある予約で実行中のプロセスが受ける有限の最大リリースレイテンシが存在する
+%                   \item バジェット枯渇と他の予約のレイテンシによる, ある予約で実行中のプロセスが受ける有限の最大リリースレイテンシが存在する
 %               \end{enumerate}
 %         \item ある長さの区間において予約が提供するサービスの最小量は, 既知の供給境界関数 $sbf()$ \cite{shin2003periodic, lipari2003resource} で得られる
 %     \end{itemize}
