--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/case_study.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/case_study.tex
@@ -42,13 +42,13 @@
 
 \begin{frame}{[実験1] 結果}
     \fitimage{
-        グラフの横軸は, 総コア帯域幅に対するローカルプランナーの予算の割合
+        グラフの横軸は, 総コア帯域幅に対するローカルプランナーのバジェットの割合
     }{result1}
 \end{frame}
 
 \begin{frame}{[実験1] 結果の考察1}
     \begin{itemize}
-        \item 時間駆動型システムとイベント駆動型システムで, 同様の予算の効果が観察できる
+        \item 時間駆動型システムとイベント駆動型システムで, 同様のバジェットの効果が観察できる
         \item 最悪サンプリングレイテンシにより, 時間駆動型セットアップは, イベント駆動型セットアップよりも $80 \mathrm{~ms}$ サンプリング周期が高くなる
         \item この場合, イベント駆動セットアップが自明に望ましいと判断できる
     \end{itemize}
@@ -63,7 +63,7 @@
 
 \begin{frame}{[実験2] 結果}
     \fitimage{
-        ローカルプランナーの予算を45\%として, 入力ジッターが増加したときのエンドツーエンドレイテンシ
+        ローカルプランナーのバジェットを45\%として, 入力ジッターが増加したときのエンドツーエンドレイテンシ
     }{result2}
 \end{frame}
 
