--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/symbols_terms.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/symbols_terms.tex
@@ -6,7 +6,7 @@
 %             \adjustbox{max width=\textwidth, max height=\slideheight}{
 %                 \centering\begin{tabular}{|c|l|} \hline
 %                     $r_i$   & 予約サーバ                                                             \\\hline
-%                     $Q_i$   & $r_i$の予算                                                            \\\hline
+%                     $Q_i$   & $r_i$のバジェット                                                            \\\hline
 %                     $P_i$   & $r_i$の周期                                                            \\\hline
 %                     $sbf()$ & ある長さの区間において予約が提供するサービスの最小量を返す供給境界関数 \\\hline
 %                 \end{tabular}
