--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/evaluation.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/evaluation.tex
@@ -72,7 +72,7 @@
 \begin{frame}{ケーススタディ I (ユニプロセッサシステム)}
     \fitimage{
         \begin{itemize}
-            \item ユニプロセッサ環境における, 特定の利用可能な予算に対するチェーンレイテンシを評価する
+            \item ユニプロセッサ環境における, 特定の利用可能なバジェットに対するチェーンレイテンシを評価する
             \item 図はケーススタディ I のチェーン構成を示す
         \end{itemize}
     }{case_study1}
@@ -80,10 +80,10 @@
 
 \begin{frame}{ケーススタディ I 実験環境}
     \begin{itemize}
-        \item コールバックは特定の予算額で同じ予約に割り当てられ, コールバックの優先度は ROS2-SD のコールバックのインデックスの降順で与えられる
+        \item コールバックは特定のバジェット額で同じ予約に割り当てられ, コールバックの優先度は ROS2-SD のコールバックのインデックスの降順で与えられる
         \item チェーン $1\left(\Gamma^{1}\right)$ はチェーン $2\left(\Gamma^{2}\right)$ よりも優先度が高いとする
-        \item ROS2PiCAS での予算の影響を評価するために, 2 つのチェーン $\left(\Gamma^{1}\right.$ および $\left.\Gamma^{2}\right)$ と同じ周期で実行され, システムで最も高い優先度を持つ定期的なスレッドを作成した
-        \item このスレッドの実行時間を調整することで, ROS2-PiCAS の利用可能な予算を制限する
+        \item ROS2PiCAS でのバジェットの影響を評価するために, 2 つのチェーン $\left(\Gamma^{1}\right.$ および $\left.\Gamma^{2}\right)$ と同じ周期で実行され, システムで最も高い優先度を持つ定期的なスレッドを作成した
+        \item このスレッドの実行時間を調整することで, ROS2-PiCAS の利用可能なバジェットを制限する
     \end{itemize}
 \end{frame}
 
@@ -95,7 +95,7 @@
 
 \begin{frame}{ケーススタディ I 考察1}
     \begin{itemize}
-        \item 利用可能な予算が増加するにつれて, 両方のアプローチのレイテンシが減少
+        \item 利用可能なバジェットが増加するにつれて, 両方のアプローチのレイテンシが減少
         \item ROS2-PiCAS のチェーン 1 は ROS2-SD よりもレイテンシが低くなる
     \end{itemize}
 \end{frame}
@@ -103,7 +103,7 @@
 \begin{frame}{ケーススタディ I 考察2}
     \begin{itemize}
         \item また, ROS2-PiCAS の 2 つのチェーンのエグゼキュータの優先度を周期的なスレッドよりも高くして, 別の実験を行った
-        \item 図の黄色の線で示されているように, チェーンは定期的なスレッドによって干渉されないため, 利用可能な予算に関係なくレイテンシが一貫している
+        \item 図の黄色の線で示されているように, チェーンは定期的なスレッドによって干渉されないため, 利用可能なバジェットに関係なくレイテンシが一貫している
     \end{itemize}
 \end{frame}
 
