--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/evaluations.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/evaluations.tex
@@ -102,9 +102,9 @@
     \begin{itemize}
         \item 特に, 本論文の方法は [5] で提案された予約ベースのアプローチよりも自明に優れていることが分かる
 \item これは主に, 各期間にアクティブ VP グループによってタスク $\tau_{i}$ に提供される合計処理能力が正確に $C_{i}$ であり, この方法では $\tau_{i}$ によって完全に利用できるのに対し, 処理能力は一般に予約の下で十分に活用されていないためである
-\item ベースのアプローチより具体的には, [5] のTheorem 1 から, 予約ベースのアプローチで各期間にタスク $\tau_{i}$ を処理するために割り当てられる予約の合計予算は, $C_{i}+L_{i} \cdot\left(m_{i}-1\right)$ より小さくてはならない
+\item ベースのアプローチより具体的には, [5] のTheorem 1 から, 予約ベースのアプローチで各期間にタスク $\tau_{i}$ を処理するために割り当てられる予約の合計バジェットは, $C_{i}+L_{i} \cdot\left(m_{i}-1\right)$ より小さくてはならない
 \item ここで, $m_{i}$ は $\tau_{i}$ に割り当てられる予約サーバの数である
-\item $m_{i}>1$ の場合, 予約の合計予算が $C_{i}$ を超えていることがはっきりと分かる
+\item $m_{i}>1$ の場合, 予約の合計バジェットが $C_{i}$ を超えていることがはっきりと分かる
 \item $L_{i}$ が大きいほど, この差は顕著になる
     \end{itemize}
 \end{frame}
