--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/introduction.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/introduction.tex
@@ -6,48 +6,41 @@
 \begin{frame}{}
     \begin{itemize}
         \item マルチコアプロセッサは, リアルタイムシステムでますます広く使用され, 高性能と低消費電力に対する急速に高まる要件に対応している
-\item マルチコアの計算能力を最大限に活用するには, ソフトウェアを並列化する必要がある
-\item シーケンシャルリアルタイムタスクの既存のスケジューリングおよび分析手法は, 並列ワークロード設定に移行するのが困難である
-\item マルチコアに並列リアルタイムタスクシステムを効率的に展開するには, 新しいスケジューリングと分析の手法が必要である
+        \item マルチコアの計算能力を最大限に活用するには, ソフトウェアを並列化する必要がある
+        \item シーケンシャルリアルタイムタスクの既存のスケジューリングおよび分析手法は, 並列ワークロード設定に移行するのが困難である
+        \item マルチコアに並列リアルタイムタスクシステムを効率的に展開するには, 新しいスケジューリングと分析の手法が必要である
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{フェデレートスケジューリング}
     \begin{itemize}
-        \item リアルタイム並列タスクのスケジューリングには様々なアプローチがあるが, その中でもフェデレーテッドスケジューリング[1]はリアルタイム性能と高い柔軟性を両立する有望なアプローチである.フェデレーテッドスケジューリングでは, 各タスクは専用のプロセッサのサブセット上で排他的に実行される（ここでは, 納期を守るために並列実行が必要な密度1以上の「重い」タスクを意味し, 密度1以下の「軽い」タスクは, 他のプロセッサ上で従来の逐次リアルタイムタスクスケジューリングアルゴリズムを用いてスケジュールすれば, その上に処理することが可能です）.連合スケジューリングは, 他の手法ではスケジューリングできない並列リアルタイムタスクシステムの大部分をうまくスケジューリングできるだけでなく, 定量的に最も優れた最悪ケース性能保証（容量拡張境界の観点）を提供することができます[1].一方, 連合スケジューリングは, タスクグラフの最長経路長や総作業量といった抽象的な情報のみを必要とする解析技術であるため, 柔軟な作業量指定が可能であり, 条件付きDAGタスク[2]やOpenMPタスクモデル[3]など, より表現力の高い並列実時間タスクモデルに拡張する可能性も十分に秘めています.
+        \item フェデレートスケジューリング [1] はリアルタイム性能と高い柔軟性を両立する有望なアプローチ
+        \item フェデレートスケジューリングでは, デッドラインを守るために並列実行が必要な密度1以上の「重い」タスクは専用のプロセッサのサブセット上で排他的に実行され, 密度1以下の「軽い」タスクは, 他のプロセッサ上で従来の逐次リアルタイムタスクスケジューリングアルゴリズムを用いてスケジュールされる
+        \item フェデレートスケジューリングは, 定量的に最も優れた最悪性能保証（容量拡張境界の観点）を提供する
+        \item フェデレートスケジューリングは, タスクグラフのクリティカルパス長や総ワークロードといった抽象的な情報のみを必要とする解析技術であるため, 条件付きDAGタスク[2]やOpenMPタスクモデル[3]などに拡張可能
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{フェデレートスケジューリングの問題点}
     \begin{itemize}
-        \item しかし, 各タスクは独自のプロセッサで排他的に実行され, これらのプロセッサの未使用の処理能力は他のタスクで使用できないため, フェデレートスケジューリングは依然としてかなりのリソースの浪費に悩まされている
-\item セクション III で示すように, 無駄な処理能力の比率は, 極端なケースでは任意に $100 \%$ に近くなる可能性がある
-\item この問題に対処するために, 以前の作業が行われました
-\item [4] は, セミフェデレートスケジューリングアプローチを提案した
-\item これにより, タスクは未使用の処理能力を他のタスクと共有できる
-\item しかし, セミフェデレートスケジューリングでの共有は非常に限られている (タスクに割り当てられるプロセッサの数に関係なく, 共有される処理能力の量は最大で 1 つのプロセッサである)
-\item [5] は, ジョブの絶対デッドラインと次のジョブのリリース時刻の間に未使用の処理能力を再利用できる, 予約ベースのスケジューリングアプローチを開発した
-\item しかし, タスクの相対デッドラインがその期間に近い場合, パフォーマンスの向上はわずかである
-\item 要約すると, [4] と [5] はどちらも, フェデレートスケジューリングの処理能力浪費の問題を限られた範囲で解決するだけである
+        \item 各タスクは独自のプロセッサで排他的に実行され, これらのプロセッサの未使用の処理能力は他のタスクで使用できないため, フェデレートスケジューリングはかなりのリソースの浪費に悩まされている
+        \item この問題に対処する既存研究はあるが [4, 5], どちらもフェデレートスケジューリングの処理能力浪費の問題を限られた範囲で解決するだけである
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item グローバルスケジューリング [6]-[8], 分割スケジューリング [9], [10], および分解ベースのスケジューリング [11], [12] など, タスクが互いにプロセッサを共有できるようにする他のタイプのスケジューリングアルゴリズムがある
-\item
-\item しかし, 分析的に保証されたスケジューラビリティは, 実際にはフェデレートスケジューリングよりも劣っている
-\item これは主に, フェデレートスケジューリングでの排他的なプロセッサの所有権により, 各タスクのスケジューリングと分析が大幅に簡素化され, 他のタイプのスケジューリングアルゴリズムよりも優れたスケジューラビリティが分析的に保証されるためである
+        \item しかし, 分析的に保証されたスケジューラビリティは, 実際にはフェデレートスケジューリングより劣っている
+        \item これは主に, フェデレートスケジューリングでの排他的なプロセッサの所有権により, 各タスクのスケジューリングと分析が大幅に簡素化され, 他のタイプのスケジューリングアルゴリズムよりも優れたスケジューラビリティが分析的に保証されるため
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item 本論文では, フェデレートスケジューリングの優れた分析可能性を享受し, タスクが互いにプロセッサを効率的に共有できるようにする仮想フェデレートスケジューリングアプローチを紹介する
-\item 主なアイデアは, 物理プロセッサ上に仮想プロセッサを構築し, 各タスクを専用の仮想プロセッサセットで排他的に実行することである
-\item 物理プロセッサが仮想プロセッサによって共有されるため, タスクは互いにプロセッサを効果的に共有し, その結果, システム全体のリソース利用率が向上する
-\item 一方, 各タスクは独自の仮想プロセッサセットで排他的に実行されるため, フェデレートスケジューリングの優れた分析可能性は, 仮想プロセッサを使用した新しいアプローチに持ち込むことができる
-\item 包括的なパフォーマンス評価を実施して, アプローチを既存のさまざまなタイプのスケジューリング/分析手法と比較する
-\item 実験結果は, 仮想フェデレーションスケジューリングアプローチが, さまざまなパラメーター設定の下で, さまざまな種類の既存の全ての方法よりも一貫して優れていることを示している
+        \item 本論文では, タスクが互いにプロセッサを効率的に共有できるようにする仮想フェデレートスケジューリングアプローチを紹介する
+        \item 主なアイデアは, 物理プロセッサ上に仮想プロセッサを構築し, 各タスクを専用の仮想プロセッサセットで排他的に実行すること
+        \item 物理プロセッサが仮想プロセッサによって共有されるため, タスクは互いにプロセッサを効果的に共有し, システム全体のリソース利用率が向上する
+        \item 一方, 各タスクは独自の仮想プロセッサセットで排他的に実行されるため, フェデレートスケジューリングの優れた分析可能性は, 仮想プロセッサを使用した新しいアプローチに持ち込むことができる
     \end{itemize}
 \end{frame}
