--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/resource_allocation.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/resource_allocation.tex
@@ -19,7 +19,7 @@
 \begin{frame}{}
     \begin{itemize}
         \item Theorem 1 の条件 (4)- (6) が満たされている限り, タスクのアクティブ VP グループをさまざまな方法で構築できる
-\item 初期予算が小さいアクティブ VP を増やしてアクティブ VP グループを構成するか, 初期予算ができるだけ大きいアクティブ VP をできるだけ少なく構成するか
+\item 初期バジェットが小さいアクティブ VP を増やしてアクティブ VP グループを構成するか, 初期バジェットができるだけ大きいアクティブ VP をできるだけ少なく構成するか
 \item 本論文の割り当てヒューリスティックは, 次の理由により後者を選択する
     \end{itemize}
 \end{frame}
@@ -38,9 +38,9 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item アクティブ VP グループの合計初期予算が正確に $C_{i}$ である場合, 全てのアクティブ VP が条件 (5) および (6) で指定された最大許容初期予算に到達できるわけではない
+        \item アクティブ VP グループの合計初期バジェットが正確に $C_{i}$ である場合, 全てのアクティブ VP が条件 (5) および (6) で指定された最大許容初期バジェットに到達できるわけではない
 \item これは, $C_{i}-D_{i}$ を $D_{i}-L_{i}$ で正確に割り切れない場合に発生する
-\item この場合, 最初の予算を, 主要なアクティブ VP に対して $D_{i}$ に設定し, 最後のアクティブ VP を除く非主要アクティブ VP に対して $D_{i}-L_{i}$ に設定し,
+\item この場合, 最初のバジェットを, 主要なアクティブ VP に対して $D_{i}$ に設定し, 最後のアクティブ VP を除く非主要アクティブ VP に対して $D_{i}-L_{i}$ に設定し,
 
               \begin{equation*}
                   C_{i}-D_{i}-\left\lfloor\frac{C_{i}-D_{i}}{D_{i}-L_{i}}\right\rfloor\left(D_{i}-L_{i}\right)
@@ -106,7 +106,7 @@
 \begin{frame}{}
     \begin{itemize}
         \item 上記の議論に基づいて, アルゴリズム 1 のリソース割り当てアルゴリズムを提案する
-\item 最初は, 全てのタスクがキュー $Q$ に $D_{i}-L_{i}$ の昇順で格納されるため, 後で $Q$ から $D_{i}-L_{i}$ が小さいタスクを取得し, アクティブな VP を割り当てる
+\item 最初は, 全てのタスクがキュー $Q$ に $D_{i}-L_{i}$ の昇順で格納されるため, 後で $Q$ から $D_{i}-L_{i}$ が小さいタスクを取得し, アクティブ VP を割り当てる
 \item 彼ら全てのプロセッサは $P$ に格納される
 \item $V$ を使用して, 生成されたパッシブ VP を保存する
 \item これは最初は空である
@@ -124,14 +124,14 @@
 \begin{frame}{}
     \begin{itemize}
         \item $P$ に十分なプロセッサがある場合 (7 行目), $P$ から $m_{i}$ プロセッサを取り出し, それらを使用して $\tau_{i}$ のアクティブ VP グループを構築する
-\item 前述のように, 最初の予算は, 主要なアクティブ VP の $D_{i}$, 最後の非主要アクティブ VP の $C_{i}-D_{i}-\left\lfloor\frac{C_{i}-D_{i}}{D_{i}-L_{i}}\right\rfloor\left(D_{i}-L_{i}\right)$, および他の非主要アクティブ VP の $D_{i}-L_{i}$ に設定する
+\item 前述のように, 最初のバジェットは, 主要なアクティブ VP の $D_{i}$, 最後の非主要アクティブ VP の $C_{i}-D_{i}-\left\lfloor\frac{C_{i}-D_{i}}{D_{i}-L_{i}}\right\rfloor\left(D_{i}-L_{i}\right)$, および他の非主要アクティブ VP の $D_{i}-L_{i}$ に設定する
 \item その後, これらのアクティブ VP を補完するパッシブ VP を生成し, $V$ に配置する
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item $P$ の残りのプロセッサが $m_{i}$ より少ない場合 (行 10), これら全ての残りのプロセッサを使用して $\tau_{i}$ のアクティブ VP グループを構築し, $D_{i}$ を主要なアクティブ VP の初期予算に設定し, $D_{i}-L_{i}$ を先頭のアクティブ VP の初期予算に設定する
+        \item $P$ の残りのプロセッサが $m_{i}$ より少ない場合 (行 10), これら全ての残りのプロセッサを使用して $\tau_{i}$ のアクティブ VP グループを構築し, $D_{i}$ を主要なアクティブ VP の初期バジェットに設定し, $D_{i}-L_{i}$ を先頭のアクティブ VP の初期バジェットに設定する
 \item 各非主要アクティブ VP
 \item 次に, これらのアクティブ VP を補完するパッシブ VP を生成し, さらに使用するために $V$ に配置する
 \item その後, パッシブ VP を $\tau_{i}$ に割り当てて, スケジュール可能にする必要がある
