--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/system_model.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/system_model.tex
@@ -5,55 +5,52 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item $N$ の散発的なタスク $\left\{\tau_{1}, \tau_{2}, \ldots, \tau_{N}\right\}$ が $M$ の同一のプロセッサにスケジュールされているタスクセットを考える
-\item 各タスク $\tau_{i}$ は, ジョブの無限シーケンスをリリースする
-\item $\tau_{i}$ の $T_{i}$ の期間は, $\tau_{i}$ の 2 つの連続するジョブのリリース時刻の間の最小間隔である
-\item 各タスク $\tau_{i}$ には相対デッドライン $D_{i}$ がある
-\item すなわち, 時間 $r$ でリリースされたタスク $\tau_{i}$ のジョブは, その絶対デッドライン $r+D_{i}$ までに終了する必要がある
-\item タスクには制約されたデッドラインがあるすなわち, 全てのタスク $\tau_{i}$ が $D_{i} \leq T_{i}$ を満たす
+        \item 始めに, 本論文で登場する表記法・用語の表を示す
+        \item 基本的な表記法・用語は資料中で説明無しで使用する
+        \item 別ファイルで開く・印刷するなどして, 常に参照できる状態にしておくことを推奨する
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\input{symbols_terms.tex}
+
+\begin{frame}{タスクセットの定義1}
     \begin{itemize}
-        \item  $J_{i}$ を使用して, タスク $\tau_{i}$ のジョブを示す (どのジョブであるかを明示的に識別する必要がないため, 表記を簡略化するためにジョブインデックスはスキップされる)
-\item 各ジョブには, $G\left(J_{i}\right)=\langle V, E\rangle$ で示される有向非循環グラフ (DAG) によってモデル化できる並列ワークロード構造がある
-\item ここで, $V$ は頂点のセットであり, $E$ はエッジのセットである
-\item 頂点 $v \in V$ は, 順次実行されるワークロードの一部をモデル化し, 最悪実行時間 (WCET) $c(v)$ によって特徴付けられる
-\item エッジ $(u, v) \in E$ は, $u$ と $v$ の間の優先関係を表す
-\item ここで, $u$ は $v$ の前身であり, $v$ は $u$ の後続である
-\item 各 DAG には, 一意の頭部頂点 (先行要素なし) と一意の末尾頂点 (後続要素なし) があると仮定する
-\item 複数の入口/出口ポイントを持つ DAG にはダミーの頭/尾頂点 (WCET が 0) をいつでも追加できるため, この仮定はモデルの表現力を制限しない
+        \item $N$ 個の散発的なタスク $\left\{\tau_{1}, \tau_{2}, \ldots, \tau_{N}\right\}$ が $M$ 個の同質プロセッサにスケジュールされているタスクセットを考える
+        \item 各タスク $\tau_{i}$ は, ジョブの無限シーケンスをリリースする
+        \item $\tau_{i}$ の $T_{i}$ の周期は, $\tau_{i}$ の 2 つの連続するジョブのリリース時刻の間の最小間隔
+        \item 各タスク $\tau_{i}$ には相対デッドライン $D_{i}$ がある
+              \begin{itemize}
+                  \item 時間 $r$ でリリースされたタスク $\tau_{i}$ のジョブは, その絶対デッドライン $r+D_{i}$ までに終了する必要がある
+              \end{itemize}
+        \item 全てのタスク $\tau_{i}$ が $D_{i} \leq T_{i}$ を満たすとする
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{タスクセットの定義2}
     \begin{itemize}
-        \item $G\left(J_{i}\right)$ の頂点は, その前の頂点が全て終了している場合に実行に適格である
-\item $G\left(J_{i}\right)$ の完全なパスは, 先行要素のない頂点で始まり, 後続要素のない頂点で終わる $G\left(J_{i}\right)$ のパスである
-\item ジョブのDAG構造の例を図1に示す
+        \item 各ジョブには, $G\left(J_{i}\right)=\langle V, E\rangle$ で示される有向非巡回グラフ (DAG) によってモデル化できる並列ワークロード構造がある
+        \item 頂点 $v \in V$ は, 順次実行されるワークロードの一部をモデル化し, 最悪実行時間 (WCET) $c(v)$ によって特徴付けられる
+        \item エッジ $(u, v) \in E$ は, $u$ と $v$ の間の優先関係を表す
+        \item 各 DAG には, 一つのソース頂点と一つのシンク頂点があると仮定する
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{アプローチに必要な情報}
     \begin{itemize}
-        \item 各ジョブのワークロードは DAG によってモデル化できると想定するが, 実際には, このアプローチではジョブの正確な DAG 構造を知る必要はない
-\item ボリューム $C_{i}$ と最長パス長 $L_{i}$ の 2 つのパラメーターに関する制約を満たすタスクのジョブのみが必要である
-    \end{itemize}
-    \begin{itemize}
-        \item  各ジョブ $J_{i}$ の $G\left(J_{i}\right)$ 内の全ての頂点の合計 WCET は, 最大でも $C_{i}$ である
-
-        \item  各ジョブ $J_{i}$ の $G\left(J_{i}\right)$ の最長パス上の全ての頂点の合計 WCET は, 最大でも $L_{i}$ である
-
+        \item 各ジョブのワークロードは DAG によってモデル化できると想定するが, 実際にはジョブの正確な DAG 構造を知る必要はない
+        \item ボリューム $C_{i}$ とクリティカルパス長 $L_{i}$ の 2 つのパラメーターに関する制約を満たすタスクのジョブのみが必要
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{ジョブのDAG構造の例}
+    \fullimage{dag_example}
+\end{frame}
+
+\begin{frame}{タスクの前提}
+    本論文では各タスク $\tau_i$に対して以下を仮定する
     \begin{itemize}
-        \item 図 1 の例では,  $C_{i}=11$ と $L_{i}=7$ (最長パスは $\left\{v_{1}, v_{4}, v_{5}\right\}$ ) である
-\item 各タスクの $C_{i}>L_{i}$ を $\tau_{i}$ と仮定する (そうでない場合, タスクは順次実行されるだけであり, 本論文の対象ではない)
-\item また, 各タスク $\tau_{i}$ に対して $C_{i}>D_{i}$ を想定する
-\item すなわち, デッドラインに間に合わせるために $\tau_{i}$ を並行して実行する必要がある
-\item それにもかかわらず, 本論文で開発された方法は, $C_{i} \leq D_{i}$ を使用したタスク (すなわち, いわゆる「軽い」タスク) を含む場合にも簡単に拡張できる
+        \item $C_{i}>L_{i}$, すなわち, ヘビータスクのみを対象とする
+        \item $C_{i}>D_{i}$, すなわち, デッドラインに間に合わせるために $\tau_{i}$ を並行して実行する必要がある
+        \notes{本論文で開発された方法は, $C_{i} \leq D_{i}$ を使用したタスク (ライトタスク) を含む場合にも簡単に拡張できる}
     \end{itemize}
 \end{frame}
