--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/tasks_executed_on_both.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/tasks_executed_on_both.tex
@@ -22,7 +22,7 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item 例えば, 図 8-(a) に示す 2 つのジョブが両方とも, $0, J_{i}$ が初期予算 5 と 2 の 2 つのアクティブ VP で実行され, $J_{k}$ が初期予算 6 で 1 つのアクティブ VP で実行されるときに両方ともリリースされるとする
+        \item 例えば, 図 8-(a) に示す 2 つのジョブが両方とも, $0, J_{i}$ が初期バジェット 5 と 2 の 2 つのアクティブ VP で実行され, $J_{k}$ が初期バジェット 6 で 1 つのアクティブ VP で実行されるときに両方ともリリースされるとする
         \item $J_{i}$ にサービスを提供する 2 つのアクティブ VP を補完する 2 つのパッシブ VP
         \item 残りのバジェットが $0, J_{k}$ よりも大きい限り, ジョブは常に先頭のアクティブ VP で実行されるため, 時刻 0 からアクティブ VP で実行される
         \item 時間 4 で,  $J_{i}$ のアクティブ VP の 1 つがデッドライン切れになり, $J_{k}$ で使用できるようになるため, $J_{k}$ はこのパッシブ VP で実行を開始する
@@ -43,7 +43,7 @@
     \begin{theorem}[]
         \begin{itemize}
             \item タスク $\tau_{i}$ が $\langle\Theta, \Pi\rangle$ で実行されると仮定する
-            \item ここで, $\Theta$ は $C_{i}$ より厳密に小さい総初期予算を持つアクティブ VP グループであり, $\Pi$ はパッシブ VP グループである
+            \item ここで, $\Theta$ は $C_{i}$ より厳密に小さい総初期バジェットを持つアクティブ VP グループであり, $\Pi$ はパッシブ VP グループである
             \item 次の条件が全て満たされている場合, $\tau_{i}$ はスケジュール可能である
         \end{itemize}
         \begin{equation*}
@@ -61,6 +61,6 @@
         \item 最後に, ジョブの $C_{i}$ および/または $L_{i}$ が小さくなった場合 (またはジョブが実行時に最悪の $C_{i}$ および/または $L_{i}$ に実行されない), これらのTheoremの条件は依然として有効であり, タスクのスケジューラビリティを保証する
         \item 一般に, DAG タスクをスケジュールすると, タイミングの異常が発生する可能性がある
         \item すなわち, 実際の最悪の応答時間は, タスクが最悪ワークロードで実行されたときに必ずしも発生するとは限りませんが, 持続可能なタスクを使用する場合, タイミングの異常について心配する必要はない
-        \item Theorem 1, 2, および 3 のスケジュール可能性テスト条件
+        \item Theorem 1, 2, および 3 のスケジューラビリティテスト条件
     \end{itemize}
 \end{frame}
