--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/tasks_executed_on_passive_vp.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/tasks_executed_on_passive_vp.tex
@@ -37,7 +37,7 @@
 
 \begin{frame}[label=lemma3]{Lemma 3}
     \begin{lemma}[]
-        $\pi_{x}$ がアクティブ VP を補完するパッシブ VP であり, 初期予算 $\theta_{z}$ がタスク $\tau_{i}$ に割り当てられ, タスク $\tau_{i}$ は常にそのデッドラインに間に合うと仮定すると, $\pi_{x}$ の供給境界関数は次のように計算される
+        $\pi_{x}$ がアクティブ VP を補完するパッシブ VP であり, 初期バジェット $\theta_{z}$ がタスク $\tau_{i}$ に割り当てられ, タスク $\tau_{i}$ は常にそのデッドラインに間に合うと仮定すると, $\pi_{x}$ の供給境界関数は次のように計算される
 
         \begin{equation*}
             s b f_{\pi_{x}}(\Delta)= \begin{cases}0, & \Delta<\theta_{z} \\ \alpha(\Delta)+\gamma(\Delta), & \Delta \geq \theta_{z}\end{cases}
@@ -75,9 +75,9 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item ジョブ $J_{i}$ のキーパスは, $G\left(J_{i}\right)$ の最長パスとは異なる可能性があることに注意
-\item $J_{i}$ のキーパスは, そのスケジューリングシーケンスがわかっている場合にのみ決定されるが, $G\left(J_{i}\right)$ の最長パスは, ジョブの実際の実行シーケンスとは無関係の静的情報である
-\item 例えば, 図 5-(b) に示す実行シーケンスの $J_{k}$ のキーパスは $\left\{u_{1}, u_{3}\right\}$ であり ($u_{3}$ は終了する最後の頂点であるため), これは $\left\{u_{1}, u_{2}\right\}$ の最長パスとは異なる
+        \item ジョブ $J_{i}$ のキーパスは, $G\left(J_{i}\right)$ のクリティカルパスとは異なる可能性があることに注意
+\item $J_{i}$ のキーパスは, そのスケジューリングシーケンスがわかっている場合にのみ決定されるが, $G\left(J_{i}\right)$ のクリティカルパスは, ジョブの実際の実行シーケンスとは無関係の静的情報である
+\item 例えば, 図 5-(b) に示す実行シーケンスの $J_{k}$ のキーパスは $\left\{u_{1}, u_{3}\right\}$ であり ($u_{3}$ は終了する最後の頂点であるため), これは $\left\{u_{1}, u_{2}\right\}$ のクリティカルパスとは異なる
     \end{itemize}
 \end{frame}
 
