--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/experiments.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/experiments.tex
@@ -56,10 +56,10 @@
 \begin{frame}{パフォーマンス比較方法}
     \vspace{1mm}
     \begin{block}{OUR-1}
-        \hlink{theorem3}{Theorem 3}, \hlink{theorem1}{Theorem 1} によって実行されるスケジュール可能性テスト
+        \hlink{theorem3}{Theorem 3}, \hlink{theorem1}{Theorem 1} によって実行されるスケジューラビリティテスト
     \end{block}
     \begin{block}{OUR-2}
-        \hlink{theorem3}{Theorem 3}, \hlink{theorem2}{Theorem 2} によって実行されるスケジュール可能性テスト
+        \hlink{theorem3}{Theorem 3}, \hlink{theorem2}{Theorem 2} によって実行されるスケジューラビリティテスト
     \end{block}
     \begin{block}{SIMU}
         以下の条件のもとで行った5000 時間単位のシミュレーションにおける各チェーンの観測された最大応答時間
@@ -169,7 +169,7 @@
 
 \begin{frame}{実験方法}
     \begin{itemize}
-        \item 2スレッドのマルチスレッドエグゼキュータとシングルスレッドエグゼキュータでそれぞれ5分間実行し, 各チェーンの平均ケース応答時間（ACRT）と最悪ケース応答時間（WCRT）を測定する（これは安全境界ではない）
+        \item 2スレッドのマルチスレッドエグゼキュータとシングルスレッドエグゼキュータでそれぞれ5分間実行し, 各チェーンの平均ケース応答時間（ACRT）と最悪応答時間（WCRT）を測定する（これは安全境界ではない）
         \item \hlink{theorem2}{Theorem 2} により各チェーンの最悪応答時間を計算し, 観測された下限と比較する
     \end{itemize}
 \end{frame}
