--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/overview.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/overview.tex
@@ -3,74 +3,76 @@
 \section{OVERVIEW}
 \label{sec: overview}
 
-\begin{frame}{}
+\begin{frame}{セクションサマリ}
+    \begin{itembox}[l]{\textbf{目的}}
+        フェデレートスケジューリングアプローチを簡単に確認し, そのリソース浪費の問題について説明する
+    \end{itembox}
+\end{frame}
+
+\begin{frame}{フェデレートスケジューリングの概要}
     \begin{itemize}
-        \item 本論文のアプローチのアイデアを紹介する前に, 最初にフェデレートスケジューリングアプローチ [1] を簡単に確認し, そのリソース浪費の問題について説明する
-\item フェデレートスケジューリングでは, 各タスク $\tau_{i}$ が割り当てられ, $m_{i}$ プロセッサ上で排他的に実行される
-\item $m_{i}$ は次のように計算される
+        \item フェデレートスケジューリングでは, 各タスク $\tau_{i}$ に$m_{i}$個のプロセッサが割り当てられ, 排他的に実行される
+        \item $m_{i}$ は次のように計算される
 
               \begin{equation*}
                   m_{i}=\left\lceil\frac{C_{i}-L_{i}}{D_{i}-L_{i}}\right\rceil
               \end{equation*}
+
+        \item これにより, $\tau_{i}$ は作業保存型スケジューラによってスケジュール可能であることが保証される
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item  $\tau_{i}$ は, $\tau_{i}$ の各ジョブの具体的な DAG 構造がどのようなものであっても, 実行の準備ができている頂点がある場合, プロセッサがアイドル状態になることを許可しない任意の作業節約スケジューラ (欲張りスケジューラとも呼ばれる) によってスケジュール可能であることが保証されている
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{}
+\begin{frame}{フェデレートスケジューリングの問題点}
     \begin{itemize}
         \item $\tau_{i}$ が実際に $m_{i}$ プロセッサで実行されると, これらのプロセッサの処理能力のかなりの部分が浪費される可能性がある
-\item 第一に, デッドラインの制約によって浪費が引き起こされる可能性がある
-\item タスクの期間が相対デッドラインよりもはるかに長い場合, ジョブの絶対的なデッドラインと次のジョブのリリース時刻の間の時間枠の処理能力は確実に無駄になる
-\item 暗黙のデッドラインタスク (デッドラインが同じ期間) の場合でも, 処理能力の浪費が非常に大きくなる可能性がある
-\item 極端なケースでは, 図 2 に示すように, 無駄な処理能力の割合が $100 \%$ に限りなく近くなる可能性がある
-\item この例では, ジョブがデッドラインに間に合うように $\frac{k}{2}$ プロセッサが必要であるため, これらで提供される処理能力の合計量は, 1 周期のプロセッサは $\left(1+\frac{2}{k}\right) \frac{k}{2}=$  $\frac{k}{2}+1$ である
-\item しかし, ジョブによって使用されていない処理容量は $\frac{k}{2}+1-\left(1+k \times \frac{1}{k}\right)=\frac{k}{2}-1$ である
-\item したがって, リソースの浪費の比率は $\frac{k / 2-1}{k / 2+1}$ であり, $k$ が無限に近づくにつれて, $100 \%$ に任意に近づきます
-\item なお, (1)の直後からフェデレートスケジューリングに必要なプロセッサ数は $k-1$ と計算され, $k \geq 2$ の場合は $\frac{k}{2}$ 以上となる
-\item この例では, 実際に必要なプロセッサの数である $\frac{k}{2}$ を使用して, 結果がスケジューラビリティテストによって妨げられないようにする
+        \item タスクの周期が相対デッドラインよりもはるかに長い場合, ジョブの絶対デッドラインと次のジョブのリリース時刻の間の処理能力は無駄になる
+        \item 暗黙のデッドラインタスクの場合でも, 処理能力の浪費が非常に大きくなる可能性がある
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{リソース浪費の例}
+    \fitimage{
+        極端なケースでは, 無駄な処理能力の割合が $100 \%$ に限りなく近くなる
+    }{resource_wasting}
+\end{frame}
+
+\begin{frame}{リソース浪費の例補足}
     \begin{itemize}
-        \item 本論文のアプローチのハイレベルなアイデアは非常に単純である
-\item フェデレートスケジューリングよりも高いリソース利用率を達成するために, フェデレートスケジューリングで浪費された処理能力を再利用し, それを他のタスクの実行に使用することを目指している
+        \item この例では, ジョブがデッドラインに間に合うように $\frac{k}{2}$ 個のプロセッサが必要
+        \item これらのプロセッサが 1周期に提供する処理能力の合計量は, $\left(1+\frac{2}{k}\right) \frac{k}{2}=$  $\frac{k}{2}+1$
+        \item ジョブが使用していない処理容量は $\frac{k}{2}+1-\left(1+k \times \frac{1}{k}\right)=\frac{k}{2}-1$
+        \item したがって, リソースの浪費の比率は $\frac{k / 2-1}{k / 2+1}$ であり, $k$ が無限に近づくにつれて, $100 \%$ に近づく
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{本論文のハイレベルなアイデア}
     \begin{itemize}
-        \item これを行うための可能な (簡単な) 方法は次のとおりである
-\item フェデレートスケジューリングと同じ方法でプロセッサをタスクに割り当て, 割り当てられたプロセッサでこれらの各タスクを高い優先度で実行する
-\item 割り当てられたプロセッサで優先度の高いタスクによって使用されていない処理能力は, 優先度の低い他のタスクを実行するために使用される
-\item このように, 優先度の高いタスクの実行は, 未使用の処理能力で実行されている優先度の低いタスクの影響を受けないため, フェデレートスケジューリングと同様に, これらのプロセッサで排他的に実行されているかのようにリアルタイムパフォーマンスを保証できる
+        \item フェデレートスケジューリングよりも高いリソース利用率を達成するために, フェデレートスケジューリングで浪費された処理能力を再利用し, それを他のタスクの実行に使用する
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{単純な方法}
     \begin{itemize}
-        \item しかし, この単純な方法では, 優先度の高いタスクが使用していない処理能力を効率的に活用して, 優先度の低いタスクを実行し, スケジュール可能性を保証することは困難である
-\item これは, 各期間に優先度の高いタスク $\tau_{i}$ によって残された未使用の処理能力の合計量 ( $m_{i} \times T_{i}-C_{i}$ ) はわかっているが, 未使用の処理能力が実際にそれらのプロセッサにどのように分散されているかについての情報がないためである
-\item そのため, あるプロセッサの未使用の処理能力を優先度の低いタスクに割り当てる場合, 一定時間内にどれだけの処理能力が保証されるかが不明であり, 未使用の処理能力をどのように分割して割り当てるかが不明である
-\item 個々の優先度の低いタスクに割り当て, それらのスケジュール可能性を保証する
+        \item フェデレートスケジューリングと同じ方法でプロセッサをタスクに割り当て, 割り当てられたプロセッサでこれらの各タスクを高い優先度で実行する
+        \item 割り当てられたプロセッサで優先度の高いタスクによって使用されていない処理能力は, 優先度の低い他のタスクを実行するために使用される
+        \item 優先度の高いタスクの実行は優先度の低いタスクの影響を受けないため, フェデレートスケジューリングと同様に排他的に実行されているかのように扱える
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{単純な方法の問題点}
+    \begin{itemize}
+        \item しかし, この単純な方法ではスケジューラビリティを保証することは困難
+        \item これは, 各周期に優先度の高いタスク $\tau_{i}$ によって残された未使用の処理能力の合計量 ( $m_{i} \times T_{i}-C_{i}$ ) はわかっているが, 未使用の処理能力が実際にそれらのプロセッサにどのように分散されているかについての情報がないため
+        \item そのため, 一定時間内にどれだけの処理能力が保証されるかが不明であり, 未使用処理能力をどのように分割して割り当てるかが不明である
+        \item 結果として, 未使用処理能力を個々の低優先度タスクに分割して割り当て, そのスケジューリング性を保証する方法が不明確
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{提案手法の概要}
     \begin{itemize}
         \item 本論文では, 上記の問題を体系的に解決するために, 仮想フェデレートスケジューリングアプローチを提案する
-\item 重要なアイデアは, 優先度の高い各タスクの実行を管理して, 割り当てられたプロセッサに残りの処理能力を制御可能な方法で分散し, 優先度の低いタスクの実行とスケジューラビリティを保証するために効率的に使用できるようにすることである
-\item より具体的には, 本論文のアプローチは, 各物理プロセッサ上に 1 つのアクティブ VP と 1 つのパッシブ $V P$ の 2 つの仮想プロセッサ (VP) を構築する
-\item アクティブ VP は高い優先度で実行され, パッシブ VP は低い優先度で実行される
-\item 各アクティブ VP の処理能力の消費は十分に制限できるため, 同じプロセッサ上のパッシブ VP によって提供される最小処理能力を十分に保証できる
-\item したがって, 各タスクに専用のアクティブ VP またはパッシブ VP のセットを割り当てることにより, フェデレートスケジューリングの分析手法を 2 種類の仮想プロセッサに対応するように一般化することで, 各タスクのスケジューラビリティを保証できる
-\item タスクは, アクティブ VP とパッシブ VP の両方の混合セットで実行することもできる
-\item これにより, アクティブ VP を提供してタスクをスケジュール可能にするのに十分なプロセッサがなく, 他の一部のプロセッサがまだ未使用である場合に, リソースの利用率がさらに向上する
-\item パッシブ VP として機能する処理能力
+        \item そのキーとなる考え方は, 各高優先度タスクの実行を管理し, 残りの処理能力をその割り当てられたプロセッサに制御可能に分配することで, 低優先度タスクの実行とスケジューラビリティの保証に効率的に使用できるようにすること
+        \item より具体的には, 本論文のアプローチは, 各物理プロセッサ上に 1 つのアクティブ VP と 1 つのパッシブ VP の 2 つの仮想プロセッサ (VP) を構築する
+        \item 各タスクに専用のアクティブVPまたはパッシブVPのセットを割り当てることにより, 2種類の仮想プロセッサを扱うためのフェデレートスケジューリングの解析技術を一般化し, 各タスクのスケジューラビリティを保証する
     \end{itemize}
 \end{frame}
